--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,5 @@ data/*
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
-
+.idea/
+ezshop.iml
