--- a/pom.xml
+++ b/pom.xml
@@ -120,5 +120,13 @@
             <systemPath>${pom.basedir}/lib/ezshop-gui.jar</systemPath>
         </dependency>
 
+        <!-- additional dependency for json persistence -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+
     </dependencies>
 </project>
